--- a/views/about.html
+++ b/views/about.html
@@ -12,22 +12,16 @@
        <!-- Optional theme -->
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-       <!--google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Francois+One" rel="stylesheet">
-        <!-- Font-awesome CDN -->
-        <script src="https://use.fontawesome.com/9905f6c07d.js"></script>
-         <link rel="shortcut icon" href="images/favicon.jpg" type="image/jpg">
-             <!-- Style-sheets -->
-         <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
+
         <link rel="stylesheet" href="assets/css/SearchStyle.css">
         <!-- <link rel="stylesheet" href="controller/autocomplete.css"> -->
-        <link href="/assets/css/mystyle.css" rel="stylesheet"/>
+        <!-- <link href="/assets/css/mystyle.css" rel="stylesheet"/> -->
 </head>
 <body>
   <div class="container">
        <div class="row">
         <br><br><br><br><br>
-         <ul>
+         <ul style="background-color:grey;font-size:20px;">
            <p>This web site is intended for</p>
            <li> anyone who needs to participate at work environments like posting a job or searching for a job.
              This website  also includes news,histories,discussions among people regarding diferent topics.
@@ -39,7 +33,7 @@
 
          </ul>
        </div>
-       <a href="/login.html">Go TO Login page</a>
+       <a href="/login.html">Go TO Login page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
        <a href="/searches.html">Go TO Home page</a>
   </div>
    <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
