--- a/views/contactus.html
+++ b/views/contactus.html
@@ -4,28 +4,10 @@
 <head>
   <title>About Page</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>your help lab dot come</title>
-        <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
-        <link rel="icon" href="/assets/log/bird.png">
-       <!-- Latest compiled and minified CSS -->
+        <title>your help lab dot com</title>
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-       <!-- Optional theme -->
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-       <!--google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Francois+One" rel="stylesheet">
-        <!-- Font-awesome CDN -->
-        <script src="https://use.fontawesome.com/9905f6c07d.js"></script>
-         <link rel="shortcut icon" href="images/favicon.jpg" type="image/jpg">
-             <!-- Style-sheets -->
-         <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
         <link rel="stylesheet" href="assets/css/SearchStyle.css">
-        <!-- <link rel="stylesheet" href="controller/autocomplete.css"> -->
-        <link href="/assets/css/contactus.css" rel="stylesheet"/>
-         <link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
-         <link href="https://fonts.googleapis.com/css?family=Teko:400,700" rel="stylesheet">
-         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body ng-controller="logincontroller">
   <header>
@@ -37,11 +19,8 @@
             </div>
          </div>
         </header>
-
-
  <span><p class="pull-left searchesLogin"><span><a href="" ng-click="changeLanguage('TG')">ትግርኛ</a></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('EN')">English</a></span>&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('NL')">Dutch</a></span></p>
-
-<section id="contact">
+<section id="contact" style="background-color:grey;">
       <div class="section-content">
         <h1 class="section-header"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s" translate="getInTouchWithUs">Get in touch with us</span></h1>
       </div>
