--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jobFinder</title>
+    <title>your help lab</title>
     <link rel="icon" href="/assets/log/bird.png">
-    <!-- Core CSS - Include with every page -->
     <link href="/assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="/assets/css/style.css" rel="stylesheet"/>
@@ -562,7 +561,6 @@
     <!-- Core Scripts - Include with every page -->
     <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="/bower_components/angular-translate/angular-translate.js"></script>
-    <!-- <script type="text/javascript" src="/bower_components/angular-sanitize/angular-sanitize.js"></script> -->
     <script src="/assets/plugins/jquery-1.10.2.js"></script>
     <script src="/assets/plugins/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="/controller/main.js"></script>
