--- a/views/newsFromHome.html
+++ b/views/newsFromHome.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="myApp" ng-cloak>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116004031-1"></script>
-    <!-- <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-116004031-1');
-    </script> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>your help lab News</title>
-    <!-- Core CSS - Include with every page -->
     <link rel="stylesheet" type="text/css" href="/bower_components/ng-img-crop/compile/minified/ng-img-crop.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-     <!-- Optional theme -->
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-     <!--google fonts-->
-      <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Francois+One" rel="stylesheet">
-      <!-- Font-awesome CDN -->
-      <script src="https://use.fontawesome.com/9905f6c07d.js"></script>
-       <link rel="shortcut icon" href="images/favicon.jpg" type="image/jpg">
-           <!-- Style-sheets -->
-       <!-- <link rel="stylesheet" type="text/css" href="/css/style.css"> -->
       <link rel="stylesheet" href="assets/css/SearchStyle.css">
       <link rel="icon" href="/assets/log/bird.png">
       <style media="screen">
@@ -54,7 +35,7 @@
                     <p class="pull-right searchesLogin "><a href="/searches.html" class="headerText" translate="backtosearchHomepage">Home</a></p></span>
                     <p class="pull-right searchesLogin "><a href="/contactus.html" class="headerText" ng-click="contactus()" translate="contactus">Contact Us</a></p></span>
                     <p class="pull-right searchesLogin"><a href="/about.html" class="headerText" ng-click="about()" translate="aboutus">About</a></p></span>
-                    <p class="pull-right searchesLogin"><a href="/login.html" class="headerText" translate="loginHeadline">Login</a></p><br>
+                    <p class="pull-right searchesLogin"><a href="/login.html" ng-click="onClickLoginFromHomePage()" class="headerText" translate="loginHeadline">Login</a></p><br>
                   </div>
              </div>
              <div >
@@ -135,7 +116,6 @@
     </div>
     <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="/bower_components/angular-translate/angular-translate.js"></script>
-    <!-- <script type="text/javascript" src="/bower_components/angular-sanitize/angular-sanitize.js"></script> -->
     <script src="/assets/plugins/jquery-1.10.2.js"></script>
     <script src="/assets/plugins/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="/controller/main.js"></script>
