--- a/views/salethingsFromHome.html
+++ b/views/salethingsFromHome.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html ng-app="myApp" ng-cloak>
   <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116004031-1"></script>
-        <!-- <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'UA-116004031-1');
-        </script> -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>your help lab buy items</title>
-    <!-- Core CSS - Include with every page -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!--google fonts-->
-     <link href="https://fonts.googleapis.com/css?family=Abhaya+Libre|Francois+One" rel="stylesheet">
-     <!-- Font-awesome CDN -->
-     <script src="https://use.fontawesome.com/9905f6c07d.js"></script>
-    <link href="/assets/css/chat.css" rel="stylesheet"/>
-    <link href="/assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
-    <link href="/assets/css/main-style.css" rel="stylesheet"/>
-   <link rel="stylesheet" href="assets/css/SearchStyle.css">
+    <link rel="stylesheet" href="assets/css/SearchStyle.css">
     <link href="/assets/css/mystyle.css" rel="stylesheet"/>
        <style>thead {color:green;}
                 tbody {color:blue;}
@@ -46,8 +27,6 @@
                   margin-left:30px;
                 }
        </style>
-    <link href="/assets/css/main-style.css" rel="stylesheet"/>
-     <link href="/assets/css/mystyle.css" rel="stylesheet"/>
     <link href="/assets/css/chat.css" rel="stylesheet"/>
    </head>
    <script src="https://js.stripe.com/v3/"></script>
@@ -65,7 +44,7 @@
                       <p class="pull-right searchesLogin "><a href="/searches.html" class="headerText" translate="backtosearchHomepage">Home</a></p></span>
                       <p class="pull-right searchesLogin "><a href="/contactus.html" class="headerText" ng-click="contactus()" translate="contactus">Contact Us</a></p></span>
                       <p class="pull-right searchesLogin"><a href="/about.html" class="headerText" ng-click="about()" translate="aboutus">About</a></p></span>
-                      <p class="pull-right searchesLogin"><a href="/login.html" class="headerText" translate="loginHeadline">Login</a></p><br>
+                      <p class="pull-right searchesLogin"><a href="/login.html" class="headerText" ng-click="onClickLoginFromSaleHomePage()" translate="loginHeadline">Login</a></p><br>
                     </div>
                </div>
             </div>
@@ -276,9 +255,8 @@
                            </div>
                        </div>
                   </div>
-                </div>   
+                </div>
               </div>
-            
           <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
           <script type="text/javascript" src="/bower_components/angular-translate/angular-translate.js"></script>
           <script src="/assets/plugins/jquery-1.10.2.js"></script>
